created new controller from sequelize methods. created one to many realtionships for weather and location tables
